# Glamdring

./: .gitignore  BUILD_README.txt  CMakeLists.txt  Makefile  README.md  build_all.bat  clean_all.bat  config_all.bat  flash.bat  startup_mk22f51212.c  update_path.bat
F767/: CMakeLists.txt  flash.bat
F767/Src/: NVIC_F767.h  RCC_F767.cpp  RCC_F767.h  f767_gpio_af.h  main.cpp
F767/startup/: startup_stm32f767xx.s
F767ZI/: .mxproject
F767ZI/Inc/: main.h
F767ZI/Src/: main.c  stm32f7xx_it.c
G031/: CMakeLists.txt  STM32G031F8Px_FLASH.ld
G031/Src/: NVIC_G031.h  RCC_G031.cpp  RCC_G031.h  app_acelerometro.cpp  app_acelerometro.h  app_nrf24.cpp  app_nrf24.h  app_rele.cpp  app_rele.h  app_timers.cpp  app_timers.h  app_uart.cpp  app_uart.h  main.cpp
G031/startup/: startup_stm32g031xx.s
G070/: .cproject  .mxproject  .project  Agenda.cpp  Agenda.h  CMakeLists.txt  G070.ioc  G070.xml  Notas.txt  STM32G070RBTx_FLASH.ld
G070/Inc/: GPIO_Port.h  I2C.h  MPU6050.h  NVIC.h  PWR.h  RCC.h  SCB.h  SPI.h  UART.h  adc.h  basic_timer.h  g070_gpio_af.h  general_timer.h  gpio.h  helpers.h  mGPIO.h  mi2c.h  stm32g0xx_it.h  usart.h
G070/Src/: DMA.cpp  GPIO_Port.cpp  I2C.cpp  MPU6050.cpp  NRF24.cpp  NVIC.cpp  NVIC_G070.h  PWR.cpp  RCC.cpp  RCC_G070.cpp  RCC_G070.h  SCB.cpp  UART.cpp  adc.c  basic_timer.cpp  dma.c  g070_gpio_af.h  general_timer.cpp  gpio.c  helpers.cpp  mGPIO.cpp  main.cpp  mi2c.cpp  stm32g0xx_hal_msp.c  stm32g0xx_hal_timebase_tim.c  tim.c  usart.c
G070/en.stm32g0_cad/STM32G070KBT6/PADS/: STM32G070KBT6.c
G070/startup/: startup_stm32g070xx.s
HAL/: CMakeLists.txt
HAL/Inc/: DAC.h  DMA.h  EXTI.h  FLASH.h  GPIO_Port.h  I2C.h  IWDG.h  MPU6050.h  NRF24.h  NVIC.h  PWR.h  Powerstep.h  RCC.h  SPI.h  UART.h  basic_timer.h  general_timer.h  gpio_af.h  helpers.h
HAL/Src/: DAC.cpp  EXTI.cpp  FLASH.cpp  GPIO_Port.cpp  I2C.cpp  MPU6050.cpp  NRF24.cpp  Powerstep.cpp  SCB.cpp  SPI.cpp  UART.cpp  basic_timer.cpp  general_timer.cpp  helpers.cpp
L475/: CMakeLists.txt
L475/Inc/: DMA.h  GPIO_Port.h  NRF24.h  NVIC.h  basic_timer.h  general_timer.h  helpers.h
L475/Src/: IWDG.cpp  NVIC_L475.h  PWR.cpp  RCC.cpp  RCC_L475.cpp  RCC_L475.h  l475_gpio_af.h  main.cpp
L475/en.b-l475e-iot01ax_sch/b-l475e-iot01a1_sources_revC/: MB1297 revC.PrjPcb
L475/en.b-l475e-iot01ax_sch/b-l475e-iot01a1_sources_revC/__Previews/: MB1297_MCU1.SchDocPreview  MB1297_POWER.SchDocPreview
L475/en.b-l475e-iot01ax_sch/b-l475e-iot01a1_sources_revD/: MB1297 revD.PrjPcb
L475/en.b-l475e-iot01ax_sch/b-l475e-iot01a1_sources_revD/__Previews/: MB1297 revC1.PcbDocPreview  MB1297 revD.PcbDocPreview  MB1297_Arduino.SchDocPreview  MB1297_Intro.SchDocPreview  MB1297_MCU2.SchDocPreview  MB1297_MEMS.SchDocPreview  MB1297_NFC_SAFE.SchDocPreview  MB1297_Peripherals.SchDocPreview  MB1297_RF_Module.SchDocPreview  MB1297_STLINK_V2-1.SCHDOCPreview  MB1297_USB_OTG_FS.SchDocPreview
L475/startup/: startup_stm32l475xx.s
MK22FN/: startup.c
STM32F767ZI/: Makefile  STM32F767ZI.ioc
STM32F767ZI/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal.c
STM32F767ZI/Inc/: gpio.h  stm32f7xx_it.h
STM32F767ZI/Src/: gpio.c  main.c
STM32G070/: .mxproject  CMakeLists.txt  Makefile  STM32G070.ioc  compile_commands.json  startup_stm32g070xx.s
STM32G070/Drivers/STM32G0xx_HAL_Driver/Src/: stm32g0xx_hal_timebase_rtc_alarm_template.c  stm32g0xx_hal_timebase_rtc_wakeup_template.c  stm32g0xx_hal_timebase_tim_template.c
STM32G070/Inc/: FreeRTOSConfig.h  dma.h  main.h  mi2c.h  stm32g0xx_hal_conf.h  tim.h
STM32G070/Martillo/: CMakeLists.txt
STM32G070/Src/: main.c  main.cpp  mi2c.cpp  stm32g0xx_hal_timebase_tim.c  stm32g0xx_it.c  system_stm32g0xx.c  tim.c  usart.c
doc/Legacy_not_used/: Legacy_docs.txt
examples/: makefile
gui/: main.py
kicad/: STM32G030_TSSOP-20.bck  STM32G030_TSSOP-20.lib  file60E83900.kicad_prl  file60E83900.kicad_pro  fp-info-cache  sym-lib-table  transmisor-rescue.lib  transmisor.kicad_pcb  transmisor.kicad_pcb-bak  transmisor.kicad_prl  transmisor.kicad_pro  transmisor.kicad_sch  transmisor.net  transmisor.pro  transmisor.sch  transmisor.xml
kicad/assembly/: transmisor-BOM.csv  transmisor-all-pos.csv
kicad/gerber/: transmisor-B_Cu.gbr  transmisor-B_Mask.gbr  transmisor-B_Paste.gbr  transmisor-B_SilkS.gbr  transmisor-Edge_Cuts.gbr  transmisor-F_Cu.gbr  transmisor-F_Mask.gbr  transmisor-F_Paste.gbr  transmisor-F_SilkS.gbr  transmisor-In1_Cu.gbr  transmisor-In2_Cu.gbr  transmisor.drl
pruebas/: pruebas_NRF24L01.cpp  pruebas_UART.cpp  pruebas_i2c.cpp  pruebas_pwm.cpp  pruebas_spi.cpp  pruebas_timers.cpp  pruebas_ultrasonico.cpp
